# WHY-CPP-PKG-SUCKS-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: cal.cpp
